--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Serge's personal blog
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://slvrtrn.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: slvrtrn
 
 # Build settings
